# boilernet

./: .gitignore  BUILD  README.md  WORKSPACE
C6_src/: C6_boot.py  C6_i2c_addresses.py
IE_src/: IE_UART_test.py  IE_boot.py  IE_i2c_addresses.py
cad/Assemblies/: Compute Node Assembly.iam
cad/Parts/: LAN Board Part.ipt  Long Female Plug Part.ipt
cad/STL/: Compute Node Enclosure.stl  Compute Node Lid.stl  Divider.stl  Main Enclosure Bottom.stl  Main Enclosure Lid Part.stl  Test Screw Hole.stl
compute/: compare.py  compress.py  decompress  decompress.c  gray0.txt  grayscale  grayscale.c  image_dimensions.txt  part_0.lz4  part_1.lz4  part_2.lz4  part_3.lz4  reconstruct.py
compute_nodes/: receiving_data.py
fastapi_backend/: main.py
gerbers/compute_nodes/: Compute Node-B_Cu.gbr  Compute Node-B_Mask.gbr  Compute Node-B_Paste.gbr  Compute Node-B_Silkscreen.gbr  (+12 more)
internal_switches/: boot.py  reading_writing_files.py  sending_to_compute.py
internal_switches/spi_test/main/: CMakeLists.txt  dumb_internal_switch.c  dumb_network_node.c  internal_switch.c  network_node.c  network_node_with_spi.c  new_internal_switch.c  new_network_node.c  read_eth.c  read_uart.c  read_uart.h  sd_card_example_main.c  sd_card_main.c
main_files/: network.c  receiver_main.c  sender_main.c
model_train/: BUILD   convert_and_header.py  extract.sh  flow_defs.bzl  get_ops.py  infer_quant.py  train.py
streamlit_app/: Makefile  app.py  requirements.txt
test/: app.py  best_working_all_test.txt  client.py  old_send_eth.py  send_eth.py  test_backend.sh  test_routines.py  test_schedule.py
(+124 files in other folders)
